force-app/main/default/objects/Lead/fields/Safe_Date__c.field-meta.xml
<CustomField>
    <fullName>Safe_Date__c</fullName>
    <label>Safe Date</label>
    <type>Date</type>
</CustomField>