force-app/main/default/objects/Lead/fields/Safe_Email__c.field-meta.xml
<CustomField>
    <fullName>Safe_Email__c</fullName>
    <label>Safe Email</label>
    <type>Email</type>
</CustomField>