force-app/main/default/objects/Lead/fields/Safe_Test__c.field-meta.xml
<CustomField>
    <fullName>Safe_Test__c</fullName>
    <label>Safe Test</label>
    <length>200</length>
    <type>Text</type>
</CustomField>