force-app/main/default/objects/Lead/fields/Test_Safe__c.field-meta.xml
<CustomField>
    <fullName>Test_Safe__c</fullName>
    <label>Test Safe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>File</fullName>
            </value>
            <value>
                <fullName>Verify</fullName>
            </value>
            <value>
                <fullName>Approve</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>